inserte el boton de mercadopago, pero no funciona

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="redux/actions/index.js"></script> -->
     <title>A Sala Llena</title>
   </head>
   <body>
@@ -39,5 +40,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!-- <script src="./src/components/ShowDetail/ShowDetail.js"></script> -->
+    <!-- <script src="https://sdk.mercadopago.com/js/v2"></script>
+
+    <script>
+      // Agrega credenciales de SDK
+      const mp = new MercadoPago("TEST-259a7057-6114-47c1-af28-0ae15fdf8e8b", {
+        locale: "es-AR",
+      });
+    
+      // Inicializa el checkout
+      mp.checkout({
+        preference: {
+          id: "preferenceId",
+        },
+        render: {
+          container: "button-checkout", // Indica el nombre de la clase donde se mostrará el botón de pago
+          label: "Hola!!!", // Cambia el texto del botón de pago (opcional)
+        },
+      });
+    </script> -->
+    
+    <!-- <script src="src/components/Checkout/Checkout.js"></script> -->
+    <!-- <script src="https://www.mercadopago.com.ar/integrations/v1/web-payment-checkout.js"data-preference-id="392112530-13516481-18a9-4638-b367-ab42b712d4cf" data-source="button"></script> -->
+
+
   </body>
-</html>
+</html> 
